# Amazon-Buybox-Analzyer

./: .gitignore  README.md  claude.md  env.example  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  marketplaces.py
main/: __init__.py  main.bat  main.py  tool.bat  tool.py
scripts/: __init__.py  base.py  buybox_analyzer.py
tests/: __init__.py  conftest.py  test_api.py  test_buybox_analyzer.py  test_file.py
tools/: __init__.py  tool.py
utils/: __init__.py  api.py  file.py
